--- a/css/styles-experience.css
+++ b/css/styles-experience.css
@@ -3,7 +3,7 @@
 }  */
 
 :root {
-  --primary-text-color: #fffbf7;
+  --primary-text-color: #000000;
   --background-color: #f0e9df;
   --navigation-text-color: rgba(35, 120, 201, 0.781);
   --navigation-hover-color: #d2d44b;
@@ -21,19 +21,8 @@
     Element Styling
 ================================*/
 
-h1 {
-  margin: 10px;
-  padding: 5px;
-}
 
-p {
-  text-align: justify;
-  color: var(--primary-text-color);
-  width: auto;
-  font-family: var(--font-text);
-  padding: 10px;
-  margin: 10px 5px 10px 5px;
-}
+
 
 /*==============================
     Base Styles
